Add model: efficientnet-b4_UNet_kontor_precision_test.onnx

--- a/crop_models/.gitignore
+++ b/crop_models/.gitignore
@@ -1,2 +1,3 @@
 /efficientnet-b4_UNet_kontor_plastic_weeds.onnx
 /efficientnet-b4_UNetStemSeg_kopfsalat.onnx
+/efficientnet-b4_UNet_kontor_precision_test.onnx
